@@ -1,3 +1,4 @@
+* Add support of _buttons
 * Add support of fields.Time
 
 Version 2.2.0 - 2011-10-25
